--- a/Web/scheduling/web/summary.html
+++ b/Web/scheduling/web/summary.html
@@ -130,6 +130,7 @@
                 </el-row>
                 <el-table
                     :data="list"
+                    :height="tableHeight"
                     v-loading="loading"    
                     style="width: 100%;margin-top: 10px;font-size:15px"
                 >
@@ -157,6 +158,7 @@
         new Vue({
             el: '#summary',
             data: {
+                tableHeight: window.innerHeight - 160,
                 now: 1,
                 size: 20,
                 total: 0,
