--- a/Web/scheduling/web/check.html
+++ b/Web/scheduling/web/check.html
@@ -116,6 +116,7 @@
 
                 <el-table
                     :data="list"
+                    :height="tableHeight"
                     v-loading="loading"    
                     style="width: 100%;margin-top: 10px;font-size:15px"
                 >
@@ -230,6 +231,7 @@
          new Vue({
              el: '#order_check',
              data: {
+                 tableHeight: window.innerHeight - 160,
                  now: 1,
                  size: 20,
                  total: 0,
