--- a/Web/scheduling/web/department_new.html
+++ b/Web/scheduling/web/department_new.html
@@ -113,6 +113,7 @@
                 </el-row>
                 <el-table
                     :data="list"
+                    :height="tableHeight"
                     v-loading="loading"    
                     style="width: 100%;margin-top: 10px;font-size:15px"
                 >
@@ -307,6 +308,7 @@
                     { value: "排班明细", text: "排班明细" },
                     { value: "账号管理", text: "账号管理" },
                 ],
+                tableHeight: window.innerHeight - 160,
                 now: 1,
                 size: 20,
                 total: 0,
