--- a/Web/scheduling/web/order.html
+++ b/Web/scheduling/web/order.html
@@ -122,7 +122,7 @@
                         </el-button-group>
                     </el-col>
                 </el-row>
-                <el-table :data="list"  style="width: 100%;font-size:15px">
+                <el-table :data="list" :height="tableHeight"  style="width: 100%;font-size:15px">
                     <el-table-column type="expand">
                         <template slot-scope="props">
                             <el-form
@@ -337,7 +337,7 @@
                 total: 0,
                 list: [],
                 loading: false,
-
+                tableHeight:window.innerHeight-120,
                 productName: '',
                 orderId: '',
                 year:'',
