--- a/Web/scheduling/web/index.html
+++ b/Web/scheduling/web/index.html
@@ -34,7 +34,7 @@
 
             <img src="../../finance/web/assets/img/animat-diamond-color.gif" style="height: 70px;margin-left:3%">
             <a style="color:white;margin-left:45%" href="../web/download/app-debug.apk" class="header-title2">下载APP</a >
-            <a style="color:white" href="../web/download/排产(20230921).xlsm" class="header-title2">下载Excel</a >
+            <a style="color:white" href="../web/download/排产系统.xlsm" class="header-title2">下载Excel</a >
             
             
             <el-dropdown trigger="hover" class="dropdown" @command="handleDropdown">
