--- a/Web/scheduling/web/index.html
+++ b/Web/scheduling/web/index.html
@@ -51,7 +51,7 @@
                     这是一段需要循环滚动的长文本内容，当文本完全滚动出容器后，会从右侧重新开始滚动...
                 </div>
             </div>
-            <img src="../../finance/web/assets/img/animat-diamond-color.gif" style="height: 70px;margin-left:3%">
+            <img src="../../finance/web/assets/img/animat-diamond-color.gif" style="height: 70px;margin-left:10%">
             <a style="color:white;" href="../web/download/app-debug.apk" class="header-title2">下载APP</a >
             <a style="color:white" href="../web/download/排产系统.xlsm" class="header-title2">下载Excel</a >
             
@@ -662,7 +662,6 @@
             cursor: pointer;
             height: 70px;
             line-height: 70px;
-            padding: 0 20px;
             margin-right: 40px;
             font-weight: 500;
         }
@@ -805,7 +804,7 @@
             position: relative;
             background: linear-gradient(135deg, rgba(29, 36, 102, 0.7) 0%, rgba(43, 55, 129, 0.7) 50%, rgba(58, 77, 163, 0.7) 100%);
             color: white;
-            padding: 12px 20px;
+            margin-top: 10px;
             border-radius: 12px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2), 
                         inset 0 0 0 1px rgba(255, 255, 255, 0.1);
@@ -817,6 +816,7 @@
             transition: all 0.3s ease;
             backdrop-filter: blur(5px);
             border: 1px solid rgba(255, 255, 255, 0.15);
+                margin-left: 10%;
         }
 
         .marquee-container:hover {
@@ -942,7 +942,6 @@
         .header-top {
             background: linear-gradient(130deg, #1d2466 0%, #2b3781 50%, #3a4da3 100%);
             color: white;
-            padding: 0.85rem 2rem;
             display:flex;
 
         }
@@ -962,6 +961,9 @@
             transition: all 0.3s ease;
             border: none;
             cursor: pointer;
+            height: 50px;
+            margin-top: 10px;
+            line-height: 50px;
   
  
         }
