--- a/Web/scheduling/web/module.html
+++ b/Web/scheduling/web/module.html
@@ -928,7 +928,7 @@
 }
 
 .el-table .el-table__row:nth-child(even) {
-    background-color: rgba(58, 97, 171, 0.08); /* #2a5298 的8%透明度浅蓝 */
+   background-color: rgba(257, 246, 250,1); /* #2a5298 的8%透明度浅蓝 */
 }
 
 /* 奇数行 - 使用更浅的底色 */
