--- a/Web/scheduling/web/order.html
+++ b/Web/scheduling/web/order.html
@@ -965,7 +965,7 @@
 
         /* 斑马线效果 */
         .el-table .el-table__row:nth-child(even) {
-             background-color: rgba(58, 97, 171, 0.08)
+             background-color: rgba(257, 246, 250,1);
         }
 
         .el-table .el-table__row:nth-child(odd) {
